zooming things in

--- a/projects/brain.html
+++ b/projects/brain.html
@@ -50,7 +50,7 @@
                     }
                 });
             </script>
-            <p>I then used Blender to clean up the 3D model--removing small disconnected components, Laplacian smoothing, etc. I also used a Bezier curve to split my brain into hemispheres; the cleavage between my left and right hemispheres wasn't a straight line, with my left hemisphere being slightly larger than my right. The cleavage line is also rotated a bit relative to the centerline of my body. <a href="https://en.wikipedia.org/wiki/Brain_asymmetry">According to Wikipedia, this is typical:</a> "The human brain has an overall leftward posterior and rightward anterior asymmetry (or brain torque)."</p>
+            <p>I then used Blender to clean up the 3D model--removing small disconnected components, Laplacian smoothing, etc. I also used a Bezier curve to split my brain into hemispheres; my longitudinal fissure isn't a straight line, and my left hemisphere is slightly larger than my right. The fissure is also rotated a bit relative to the centerline of my body. <a href="https://en.wikipedia.org/wiki/Brain_asymmetry">According to Wikipedia, this is typical:</a> "The human brain has an overall leftward posterior and rightward anterior asymmetry (or brain torque)."</p>
             <img src="../assets/img/brain/brain_blend_top.png" alt="top view of brain in Blender">
             <p>Through this process, I also learned that the back of my brain is really fucking smooth. It's probably a segmentation issue, but it's funnier to imagine that my visual cortex has simply not caught up with the rest of human evolution. I'm happy to report that my prefrontal cortex is sufficiently wrinkled, though.</p>
             <img src="../assets/img/brain/brain_blend_side.png" alt="side view of brain in Blender">
@@ -60,23 +60,23 @@
             <div class="project-gallery">
                 <img src="../assets/img/brain/brain_sla.jpg" alt="brain print with supports">
                 <img src="../assets/img/brain/brain_heart_sla.jpg" alt="brain print with supports removed">
-                <img src="../assets/img/brain/brain_heart_sla_2.jpg" alt="brain print with supports removed" style="max-height: 180px; width:auto;">
+                <img src="../assets/img/brain/brain_heart_sla_2.jpg" alt="brain print with supports removed" style="max-height: 250px; width:auto;">
             </div>
             <div style="text-align: center;">
                 <small>Left to right: the brain right out of the printer, brain and heart prints, brain and heart prints with support removed.</small>
             </div>
 
-            <p>Next, I spraypainted the prints with a bright, somewhat flesh-colored pink. To do this, I hung them from a cardboard box using some string and tacks, then gradually applied about 3 coats of paint before finishing off with a glossy finish. While they were drying, I made some earring hooks out of paper clips.</p>
+            <p>Next, I spray-painted the prints with a bright, somewhat flesh-colored pink. To do this, I hung them from a cardboard box using some string and tacks, then gradually applied about 3 coats of paint before finishing off with a glossy finish. While they were drying, I made some earring hooks out of paper clips.</p>
 
             <div class="project-gallery">
-                <img src="../assets/img/brain/spraypaint_brain.jpg">
-                <img src="../assets/img/brain/finished_all.jpg">
+                <img src="../assets/img/brain/spraypaint_brain.jpg" style="max-height: 300px; width:auto;"">
+                <img src="../assets/img/brain/finished_all.jpg" style="max-height: 300px; width:auto;">
             </div>
 
             <p>Here's what they look like as jewelry :) I gave the brain earrings to Sneve and the heart earrings to my amazing UROP mentor Ana Dodik.</p>
             <div class="project-gallery">
                 <img src="../assets/img/brain/finished_brain.jpg">
-                <img src="../assets/img/brain/finished_heart.jpg">
+                <img src="../assets/img/brain/finished_heart.jpg" style="max-height: 300px; width:auto;"">
             </div>
         </div>
     </main>
