add hardcoded image paths

--- a/art.html
+++ b/art.html
@@ -60,6 +60,23 @@
         <p>&copy; Isabella Yu, 2025</p>
     </footer>
 
+    <script>
+        // Define illustration images for scrapbook gallery (fallback for GitHub Pages)
+        window.illustrationImages = [
+            'assets/img/illustrations/anticupid.png',
+            'assets/img/illustrations/boston.png',
+            'assets/img/illustrations/bubblegum.png',
+            'assets/img/illustrations/dragonfly.png',
+            'assets/img/illustrations/dumpy.jpg',
+            'assets/img/illustrations/foosh.png',
+            'assets/img/illustrations/jojo.png',
+            'assets/img/illustrations/lovecraftian.png',
+            'assets/img/illustrations/mass_ave.jpg',
+            'assets/img/illustrations/panic_recursion.png',
+            'assets/img/illustrations/penn.png',
+            'assets/img/illustrations/sally.png'
+        ];
+    </script>
     <script src="js/gallery.js"></script>
     <script src="js/scrapbook-gallery.js"></script>
 </body>
