--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="bio">
                 <h1>Isabella Yu</h1>
                 
-                <p>Hey! I'm Isabella, a first-year PhD student at Berkeley EECS advised by Angjoo Kanazawa and Alyosha Efros. Previously, I earned my MEng (2025) and S.B. (2024) in EECS/Math at MIT, where I worked with Vincent Sitzmann, Justin Solomon, and Amir Zamir. I'm interested in perception-for-robotics, graphics, and cognitive science.</p>
+                <p>Hi! I'm Isabella, a first-year PhD student at Berkeley EECS advised by <a href="https://people.eecs.berkeley.edu/~kanazawa">Angjoo Kanazawa</a> and <a href="https://people.eecs.berkeley.edu/~efros">Alyosha Efros</a>. I got my MEng (2025) and S.B. (2024) in EECS/Math at MIT, where I worked with <a href="https://www.vincentsitzmann.com">Vincent Sitzmann</a>, <a href="https://people.csail.mit.edu/jsolomon">Justin Solomon</a>, and <a href="https://vilab.epfl.ch/zamir">Amir Zamir</a>. I'm interested in perception-for-robotics, graphics, and cognitive science. I am grateful to be supported by the Berkeley Chancellor's Fellowship.</p>
 
                 <div class="contact-icons">
                     <a href="https://scholar.google.com/citations?user=QsGGSlQAAAAJ&hl=en" target="_blank">Google Scholar</a>
