--- a/art.html
+++ b/art.html
@@ -24,6 +24,13 @@
         <p>I like to draw and make comics. I've also dabbled in animation and filmmaking, directing two films for MIT admissions. All works shown were created without the use of generative AI.</p>
         
         <p><a href="https://www.artstation.com/yukaryote" target="_blank">Artstation</a> / <a href="https://www.instagram.com/isbla.rt" target="_blank">Instagram</a></p>
+        
+        <section>
+            <h2 class="category">illustrations (drag them! click them!)</h2>
+            <div class="illustrations-grid">
+                <!-- images arranged randomly, kinda nonoverlapping -->
+            </div>
+        </section>
 
         <section>
             <h2 class="category">comics</h2>
@@ -37,13 +44,6 @@
                     <img src="assets/img/comics/obsolescence_pg1.png" alt="Obsolescence comic">
                     <h3>Obsolescence</h3>
                 </a>
-            </div>
-        </section>
-
-        <section>
-            <h2 class="category">illustrations</h2>
-            <div class="illustrations-grid">
-                <!-- Images will be dynamically arranged by image-packer.js -->
             </div>
         </section>
 
