--- a/projects/guitar.html
+++ b/projects/guitar.html
@@ -28,7 +28,7 @@
 
             <p><strong>NOTE:</strong> this is not a tutorial on how to make a guitar! I did some pretty jank things with the limited tools I had. Please do proper research if you decide to get into luthiery.</p>
 
-            <p>In the summer of 2019, I became obsessed with The Beatles for some inexplicable reason. As a child of Chinese immigrants, I was never exposed to The Beatles' music growing up, instead listening mainly to classical pieces to supplement my piano lessons. So classic rock wasn't so classic to me; this was something really novel.</p>
+            <p>2019 was <i>my</i> Summer of Love, because that was the summer I discvoered The Beatles. As a child of Chinese immigrants, I was never exposed to The Beatles' music growing up, instead listening mainly to classical pieces to supplement my piano lessons. So classic rock wasn't so classic to me; this was something really novel.</p>
 
             <p>I decided I wanted to play their songs on the guitar. I didn't even know how to play guitar, so I set about learning. I borrowed my friend's acoustic, but it didn't have the same feel as the tangy electric guitars that The Beatles played. But I didn't feel like sinking money into an electric guitar, and I felt like I couldn't find one that would fit my small hands. This is when I resolved to build my own.</p>
 
