--- a/art.html
+++ b/art.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="art.html">Art</a></li>
+                <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
@@ -68,9 +69,11 @@
             'assets/img/illustrations/bubblegum.png',
             'assets/img/illustrations/dragonfly.png',
             'assets/img/illustrations/dumpy.jpg',
+            'assets/img/illustrations/endgames.jpg',
             'assets/img/illustrations/foosh.png',
             'assets/img/illustrations/jojo.png',
             'assets/img/illustrations/lovecraftian.png',
+            'assets/img/illustrations/machines.jpg',
             'assets/img/illustrations/mass_ave.jpg',
             'assets/img/illustrations/panic_recursion.png',
             'assets/img/illustrations/penn.png',
