--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,13 @@
                 </a>
                 <p>a.k.a. proof that I'm a self-replicating Turing Machine</p>
             </div>
-
+            <div class="tile">
+                <a href="projects/squid.html">
+                    <img src="assets/img/squid/done_1.jpeg" alt="Chronicles of a mad hatter">
+                    <h3>Chronicles of a mad hatter</h3>
+                </a>
+                <p>Making a giant squid hat for Halloween</p>
+            </div>
             <div class="tile">
                 <a href="https://colab.research.google.com/drive/16aqzccTliXvqW7CDF11SjifAV9CTbZ46?usp=sharing">
                     <img src="assets/img/penrose.gif" alt="Impossible Objects">
