--- a/projects/guitar.html
+++ b/projects/guitar.html
@@ -28,13 +28,13 @@
 
             <p><strong>NOTE:</strong> this is not a tutorial on how to make a guitar! I did some pretty jank things with the limited tools I had. Please do proper research if you decide to get into luthiery.</p>
 
-            <p>2019 was <i>my</i> Summer of Love, because that was the summer I discvoered The Beatles. As a child of Chinese immigrants, I was never exposed to The Beatles' music growing up, instead listening mainly to classical pieces to supplement my piano lessons. So classic rock wasn't so classic to me; this was something really novel.</p>
+            <p>2019 was <i>my</i> Summer of Love, because that was the summer I discovered The Beatles. As a child of Chinese immigrants, I was never exposed to The Beatles' music growing up, instead listening mainly to classical pieces to supplement my piano lessons. So classic rock wasn't so classic to me; this was something really novel.</p>
 
             <p>I decided I wanted to play their songs on the guitar. I didn't even know how to play guitar, so I set about learning. I borrowed my friend's acoustic, but it didn't have the same feel as the tangy electric guitars that The Beatles played. But I didn't feel like sinking money into an electric guitar, and I felt like I couldn't find one that would fit my small hands. This is when I resolved to build my own.</p>
 
             <p>I had pretty limited experience in woodworking, but I knew I could make this work. To mix electric and acoustic tones, I settled on a semi-hollow telecaster design. I kept the scale length at the standard 25.5", but I made the neck slimmer to fit my hands. With these attributes in mind, I CADed this template up on Autodesk Inventer as a router guide.</p>
 
-            <img src="../assets/img/guitar/telecaster_template" alt="Telecaster template">
+            <img src="../assets/img/guitar/telecaster_template.JPG" alt="Telecaster template">
 
             <p>I laser cut the MDF router guide out of 1/2" MDF, which the laser did NOT like. Took me so many passes to cut it. In the meantime, I had glued together some 1/2" poplar boards for the actual body of the guitar. Using the router guide, I cut out the general shape of the telecaster and the hollow parts. I drilled out the hollow parts first before using the router to clean things out to save time.</p>
 
