--- a/projects/squid.html
+++ b/projects/squid.html
@@ -16,6 +16,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../projects.html">Projects</a></li>
                 <li><a href="../art.html">Art</a></li>
+                <li><a href="../blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
@@ -126,7 +127,7 @@
             <p>9:22pm. I had to squat to get in the club. Thank you to all the random SF strangers who were enamored by the squid; it really made my day.</p>
             <div class="project-gallery">
                 <img src="../assets/img/squid/bair.jpeg" alt="BAIR costume party">
-                <img src="../assets/img/squid/tyler.jpeg" alt="tyler">
+                <img src="../assets/img/squid/tyler_1.jpeg" alt="tyler">
                 <img src="../assets/img/squid/bair_mog.jpg" alt="moggin it">
                 <img src="../assets/img/squid/bart.jpeg" alt="on the bart">
                 <img src="../assets/img/squid/incar.jpeg" alt="in car">
