--- a/projects/impossible-objects.html
+++ b/projects/impossible-objects.html
@@ -15,6 +15,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../projects.html">Projects</a></li>
                 <li><a href="../art.html">Art</a></li>
+                <li><a href="../blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
