--- a/blog.html
+++ b/blog.html
@@ -22,8 +22,31 @@
 
     <main>
         <h1>Blog</h1>
+        <p>Does this prove I have a soul, or lay bare that I'm nothing but an interpolation of my inspirations and life experiences? Perhaps those aren't the right concepts to be comparing in the first place.</p>
+        <p>For hopefully obvious reasons, none of these pieces were written using generative AI.</p>
         <section class="blog">
-            <p>An upcoming blog aspirationally titled "mechanistic interpretability of the soul"...</p>
+            <div class="blog-entry">
+                <a href="blog/machines.html" class="blog-link">
+                    <div class="blog-thumbnail">
+                        <img src="assets/img/illustrations/machines.jpg" alt="Machines of Loving Grace">
+                    </div>
+                    <div class="blog-info">
+                        <h2>Machines of Loving Grace</h2>
+                        <p class="blog-date">November 16, 2025</p>
+                    </div>
+                </a>
+            </div>
+            <div class="blog-entry">
+                <a href="blog/bildungsroman.html" class="blog-link">
+                    <div class="blog-thumbnail">
+                        <img src="assets/img/illustrations/Black_light_Stairwell.jpg" alt="A tEp bildungsroman">
+                    </div>
+                    <div class="blog-info">
+                        <h2>A tEp bildungsroman</h2>
+                        <p class="blog-date">November 22, 2021</p>
+                    </div>
+                </a>
+            </div>
         </section>
     </main>
 
