--- a/projects/squid.html
+++ b/projects/squid.html
@@ -56,7 +56,7 @@
             <div style="text-align: center;">
                 <small>TIL the big fleshy "hat" that squids have is actually called a mantle.</small>
             </div>
-            <p>I traced the circumference of my bike helmet onto a piece of carboard and used it as a template to cut out the outer helmet. I cut out a place for my head to poke through and an opening in the back so I could access my helmet's size adjustment easily. I epoxied the flat top to the ring.</p>
+            <p>I split the outer helmet into two parts, the flat top where the squid mantle would be mounted, and a ring that would wrap around my head and where I would paint the eyes. I traced the circumference of my bike helmet onto a piece of carboard and used it as a template to cut out the flat top. When making the ring, I left a place for my face to poke through and an opening in the back so I could access my helmet's size adjustment easily. I epoxied the two parts together.</p>
             <div class="project-gallery">
                 <img src="../assets/img/squid/outer_helmet.jpeg" alt="Outer helmet">
                 <img src="../assets/img/squid/outer_helmet_worn.jpeg" alt="Outer helmet worn">
@@ -79,10 +79,10 @@
             <div style="text-align: center;">
                 <small>I really wanted to make the squid purple, but I didn't have enough blue paint to mix in with the red :( so I settled for this vermillion color (around 75% red, 25% yellow).</small>
             </div>
-            <p>My plan was to bend the bottom of the mantle backwards to form a tab, then glue that tab onto the outer helmet. The thing is, if you want to project a curved line onto a flat surface, you have to distort it somehow. Take the Goode homolosine projection of the Earth as an example. </p>
+            <p>My plan was to bend the bottom of the mantle backwards to form a tab, then glue that tab onto the outer helmet. The thing is, if you want to project a curved line onto a flat surface, you have to distort it somehow, like trying to wrap a flat map around a globe.</p>
             <p>Thus, I had to cut away sections of the tab until the cardboard didn&#39;t overlap on itself when I bended it. The paint on the other squid mantle piece dried as I toiled away, filling the apartment with the sweet scent of acrylic paint fumes.</p>
             <img src="../assets/img/squid/tabs.jpeg" alt="Mantle tab" style="display: block; margin: 1em auto;">
-            <p>1:44am. This next part was by far the most technically challenging. I had to epoxy the mantle onto the top of the helmet while keeping its curvature. The ends of the mantle tended to spread outwards, while the middle tended to move inwards--a behavior governed by the biharmonic equation. I quickly applied epoxy to the bottom of the tabs, put it on, and held it there for 5 minutes with both hands while it hardened. After I guesstimated that the epoxy had solidified enough, I quickly duct-taped the tabs down and put some tubs of acrylic paint over it to weight it down. I cannot describe in words how jank this clampless setup was. You had to be there to see the panic in my eyes.</p>
+            <p>1:44am. This next part was by far the most technically challenging. I had to epoxy the mantle onto the top of the helmet while keeping its curvature. The ends of the mantle tended to spread outwards, while the middle tended to move inwards&quot;.<sup><a href="#fn-1" id="fnref-1">1</a></sup> I quickly applied epoxy to the bottom of the tabs, put it on, and held it there for 5 minutes with both hands while it hardened. After I guesstimated that the epoxy had solidified enough, I quickly duct-taped the tabs down and put some tubs of acrylic paint over it to weight it down. I cannot describe in words how jank this clampless setup was. You had to be there to see the panic in my eyes.</p>
             <img src="../assets/img/squid/mantle_back_glued.jpeg" alt="Epoxy setup" style="display: block; margin: 1em auto;">
             <div style="text-align: center;">
                 <small>kms</small>
@@ -124,7 +124,7 @@
             <div style="text-align: center;">
                 <small>Photo cred to Chung Min.</small>
             </div>
-            <p>9:22pm. I had to squat to get in the club. Thank you to all the random SF strangers who were enamored by the squid; it really made my day.</p>
+            <p>9:22pm. I had to squat to get in the bar. Thank you to all the random SF strangers who were enamored by the squid; it really made my day.</p>
             <div class="project-gallery">
                 <img src="../assets/img/squid/bair.jpeg" alt="BAIR costume party">
                 <img src="../assets/img/squid/tyler_1.jpeg" alt="tyler">
@@ -150,6 +150,14 @@
             </ul>
 
             <p><a href="../projects.html">← Back to Projects</a></p>
+        <section class="footnotes">
+                <ol>
+                    <li id="fn-1">
+                        The <a href="https://en.wikipedia.org/wiki/Biharmonic_equation">biharmonic equation</a> could probably model this behavior, since it describes the bending of elastic plates under load.
+                        <a href="#fnref-1" aria-label="Return to content">↩</a>
+                    </li>
+                </ol>
+        </section>
         </div>
     </main>
 
