--- a/projects.html
+++ b/projects.html
@@ -22,19 +22,17 @@
 
     <main>
         <h1>Projects</h1>
-        <p>Some technical projects I've worked on for research, for courses, and just for fun.</p>
+        <p>physical things I built that I remembered to document</p>
 
         <div class="grid">
-
-            <div class="tile"?>
-                <a href="projects/guitar.html">
-                    <img src="assets/img/guitar/guitar_front.jpg" alt="Homemade Telecaster">
-                    <h3>Homemade Telecaster</h3>
+            <div class="tile">
+                <a href="projects/squid.html">
+                    <img src="assets/img/squid/done_1.jpeg" alt="Chronicles of a mad hatter">
+                    <h3>Chronicles of a mad hatter</h3>
                 </a>
-                <p>Making an electric guitar from scratch</p>
+                <p>Making a giant squid hat for Halloween 2025</p>
             </div>
-
-            <div class="tile"?>
+            <div class="tile">
                 <a href="projects/brain.html">
                     <img src="assets/img/brain/finished_brain.jpg" alt="How to make your brain into earrings">
                     <h3>How to make your brain into earrings</h3>
@@ -42,40 +40,19 @@
                 <p>a.k.a. proof that I'm a self-replicating Turing Machine</p>
             </div>
             <div class="tile">
-                <a href="projects/squid.html">
-                    <img src="assets/img/squid/done_1.jpeg" alt="Chronicles of a mad hatter">
-                    <h3>Chronicles of a mad hatter</h3>
-                </a>
-                <p>Making a giant squid hat for Halloween</p>
-            </div>
-            <div class="tile">
-                <a href="https://colab.research.google.com/drive/16aqzccTliXvqW7CDF11SjifAV9CTbZ46?usp=sharing">
-                    <img src="assets/img/penrose.gif" alt="Impossible Objects">
-                    <h3>Inverse Rendering Impossible Objects</h3>
-                </a>
-                <p>The origins of my foray into impossible shapes, please see <a href="https://anadodik.github.io/publication/meschers">Meschers</a> for the full project!</p>
-            </div>
-
-            <div class="tile">
                 <a href="projects/loft.html">
                     <img src="assets/img/loft.jpg" alt="Janky Loft">
                     <h3>A Janky Loft</h3>
                 </a>
                 <p>Building a loft bed in my MIT dorm</p>
             </div>
-
             <div class="tile">
-                <a href="assets/pdf/belief_space_planning.pdf">
-                    <img src="assets/img/belief_space_planning.png" alt="Belief Space Planning">
-                    <h3>Efficient Planning in Non-Gaussian Belief Spaces</h3>
+                <a href="projects/guitar.html">
+                    <img src="assets/img/guitar/guitar_front.jpg" alt="Homemade Telecaster">
+                    <h3>Homemade Telecaster</h3>
                 </a>
-                <p>Implementation of Platt et al.'s paper</p>
+                <p>Making an electric guitar from scratch</p>
             </div>
-            
-            <!-- <a href="assets/pdf/finetuning_sd.pdf" class="tile">
-                <img src="assets/img/sd.png" alt="Style Transfer">
-                <h3>Stable Diffusion Style Transfer</h3>
-                <p>Me getting AI to replace myself (it can't...yet)</p> -->
             </a>
         </div>
     </main>
