--- a/projects/guitar.html
+++ b/projects/guitar.html
@@ -33,7 +33,7 @@
 
             <p>I decided I wanted to play their songs on the guitar. I didn't even know how to play guitar, so I set about learning. I borrowed my friend's acoustic, but it didn't have the same feel as the tangy electric guitars that The Beatles played. But I didn't feel like sinking money into an electric guitar, and I felt like I couldn't find one that would fit my small hands. This is when I resolved to build my own.</p>
 
-            <p>I had pretty limited experience in woodworking, but I knew I could make this work. To mix electric and acoustic tones, I settled on a semi-hollow telecaster design. I kept the scale length at the standard 25.5", but I made the neck slimmer to fit my hands. With these attributes in mind, I CADed this template up on Autodesk Inventer as a router guide.</p>
+            <p>I had pretty limited experience in woodworking, but I knew I could make this work. To mix electric and acoustic tones, I settled on a semi-hollow telecaster design. I kept the scale length at the standard 25.5", but I made the neck slimmer to fit my hands. With these attributes in mind, I CADed this template up on Autodesk Inventor as a router guide.</p>
 
             <img src="../assets/img/guitar/telecaster_template.JPG" alt="Telecaster template">
 
