--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
 
     <main>
         <h1>Blog</h1>
-        <p>Does this prove I have a soul, or lay bare that I'm nothing but an interpolation of my inspirations and life experiences? Perhaps those aren't the right concepts to be comparing in the first place.</p>
+        <p>wherein I document my creative process. Does this exercise prove I have a soul, or lay bare that I'm nothing but an interpolation of my inspirations and life experiences? Perhaps those aren't the right concepts to be comparing in the first place.</p>
         <p>For hopefully obvious reasons, none of these pieces were written using generative AI.</p>
         <section class="blog">
             <div class="blog-entry">
