--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 
     <main>
         <h1>Projects</h1>
-        <p>physical things I built that I remembered to document</p>
+        <p>physical things I built that I remembered/chose to document</p>
 
         <div class="grid">
             <div class="tile">
