--- a/projects/squid.html
+++ b/projects/squid.html
@@ -41,7 +41,7 @@
                 <p style="margin:0;">And turns out they won the best costume prize.</p>
             </div>
 
-            <p><em>Pardon my poetry, I just really wanted to make a Halloween version of &quot;A Visit from St. Nicholas.&quot;</em></p>
+            <p><em>Pardon the inconsistent meter, I just really wanted to make a Halloween version of &quot;A Visit from St. Nicholas,&quot; but I'm really out of practice with poetry.</em></p>
             <hr>
             <p>&#39;Twas the night before Halloween, and I still didn&#39;t know what my costume would be, except that I wanted to make it myself. I had requested my labmates bring as much cardboard as they wanted to carry to lab, and Hongsuk had graciously offloaded his recycling bin to me. While lugging the cardboard home, I mulled over two options: giant squid or Shai Hulud. I went with the first because it seemed easier to make and because I missed my old fraternity tEp/Xi. I had zero plans, only vibes.</p>
             <div class="project-gallery">
@@ -56,7 +56,7 @@
             <div style="text-align: center;">
                 <small>TIL the big fleshy "hat" that squids have is actually called a mantle.</small>
             </div>
-            <p>I split the outer helmet into two parts, the flat top where the squid mantle would be mounted, and a ring that would wrap around my head and where I would paint the eyes. I traced the circumference of my bike helmet onto a piece of carboard and used it as a template to cut out the flat top. When making the ring, I left a place for my face to poke through and an opening in the back so I could access my helmet's size adjustment easily. I epoxied the two parts together.</p>
+            <p>I split the outer helmet into two parts, the flat top where the squid mantle would be mounted, and a ring that would wrap around my head and where I would paint the eyes. I traced the circumference of my bike helmet onto a piece of carboard and used it as a template to cut out the flat top. When making the ring, I left a place for my face to poke through and an opening in the back so I could access my helmet's size adjustment knob easily. I epoxied the two parts together.</p>
             <div class="project-gallery">
                 <img src="../assets/img/squid/outer_helmet.jpeg" alt="Outer helmet">
                 <img src="../assets/img/squid/outer_helmet_worn.jpeg" alt="Outer helmet worn">
@@ -73,7 +73,7 @@
                 <small>Wow, a cardboard anchor!</small>
             </div>
 
-            <p>11:22pm. After eating 22 strawberries, I started on the mantle. I took an extra large Home Depot moving box I found outside (which, unbeknownst to me at the time, belonged to my roommate Kayo (I have since profusely apologized and got her a new box (at least she liked the squid))) and cut it into a squid like shape and painted it. My thought at the time was to somehow bend the mantle to fit the curve of the outer helmet, because apparently I&#39;m a masochist who didn&#39;t think about how much easier it would be to just make a rectangular prism.</p>
+            <p>11:22pm. After eating 22 strawberries, I started on the mantle. I took an extra large Home Depot moving box I found outside (which, unbeknownst to me at the time, belonged to my roommate Kayo (I have since profusely apologized and got her a new box (at least she liked the squid))), cut it into a squid-like shape, and painted it. My thought at the time was to somehow bend the mantle to fit the curve of the outer helmet, because apparently I&#39;m a masochist who didn&#39;t think about how much easier it would be to just make a rectangular prism.</p>
 
             <img src="../assets/img/squid/mantle_front_painted.jpeg" alt="Mantle painted" style="display: block; margin: 1em auto;">
             <div style="text-align: center;">
@@ -124,7 +124,7 @@
             <div style="text-align: center;">
                 <small>Photo cred to Chung Min.</small>
             </div>
-            <p>9:22pm. I had to squat to get in the bar. Thank you to all the random SF strangers who were enamored by the squid; it really made my day.</p>
+            <p>9:22pm. I had to squat to get in the bar. Thank you to all the random SF strangers who were enamored by the squid; it really made my day. Photos here are shown with the consent of the subjects.</p>
             <div class="project-gallery">
                 <img src="../assets/img/squid/bair.jpeg" alt="BAIR costume party">
                 <img src="../assets/img/squid/tyler_1.jpeg" alt="tyler">
