--- a/projects/brain.html
+++ b/projects/brain.html
@@ -28,14 +28,14 @@
             <img src="../assets/img/brain/finished_brain.jpg" alt="Brain earrings" style="width: 50%; margin: 0 auto; display: block;">
             <br>
             <small style="text-align: center;">DISCLAIMER: Please do not use this procedure for medical diagnosis /srs</small>
-            <p>In spring 2023, I signed up for one of <a href="https://www.evlab.mit.edu">Ev Fedorenko's</a> fMRI studies to receive a $75 Amazon gift card. However, upon hearing from my wonderful friend Sneve (who is a PhD student at Harvard neuro), I hatched another plan >:)</p>
+            <p>In spring 2023, I signed up for one of <a href="https://www.evlab.mit.edu">Ev Fedorenko's</a> fMRI studies to receive a $75 Amazon gift card. However, upon hearing from my wonderful friend Sneve (who is a PhD student at Harvard neuro) that you can ask for your fMRI files afterwards, I hatched another plan >:)</p>
             <p>The fMRI itself was actually quite difficult to complete. I had to keep my head completely still for 2 hours while sporadically solving word puzzles, and I was fighting the urge to doze off the entire time. I'm not sure if my sleepiness was detectable in the fMRI, but the researchers administering the test assured me that my results would still be useful. In the end, I got a DropBox folder of my fMRI scan images, which made it all worth it. It was time to get to work.</p>
             <img src="../assets/img/brain/brain.gif" alt="gif of my brain">
             <div style="text-align: center;">
                 <small>The researchers sent me a GIF of my brain, too :)</small>
             </div>
-            <p>Thankfully, the Internet is teeming with resources from people who had 3D printed their brains before. I followed <a href="https://www.youtube.com/watch?v=k1WIpwV-8lE">this tutorial</a> to get an STL file of my brain from the DICOM fMRI images. I used 3DSlicer with the SwissSkullStripper(?? what a name) extension to segment out my brain from my skull, then stack the brain segments together into a 3D file. You can also print various parts of your head by segmenting out the appropriate organ, e.g. your skull, but that could be a project for another day.</p>
-            <p>If you want to see what my entire head looks like in 3DSlicer, click the spoiler below at your own risk (CW: what appears to be the flesh of a freshly-minted zombie).</p>
+            <p>Thankfully, the Internet is teeming with resources from people who've 3D printed their brains before. I followed <a href="https://www.youtube.com/watch?v=k1WIpwV-8lE">this tutorial</a> to get an STL file of my brain from the DICOM fMRI images. I used 3DSlicer with the SwissSkullStripper(?? what a name) extension to segment out my brain from my skull, then stack the brain segments together into a 3D file. You can also print various parts of your head by segmenting out the appropriate organ, e.g. your skull, but that could be a project for another day.</p>
+            <p>If you want to see what my entire head looks like in 3DSlicer, click the spoiler below at your own risk (CW: the closest possible thing on this planet to a freshly-minted zombie).</p>
             <button id="toggle-head-btn" type="button" style="display: block; margin: 1em auto; font-family: monospace; font-size: 11pt;">Show</button>
             <img id="head-image" src="../assets/img/brain/head.png" alt="whole head" style="display: none; margin: 1em auto;">
             <script>
