--- a/blog.html
+++ b/blog.html
@@ -26,13 +26,24 @@
         <p>For hopefully obvious reasons, none of these pieces were written using generative AI.</p>
         <section class="blog">
             <div class="blog-entry">
+                <a href="blog/endgames.html" class="blog-link">
+                    <div class="blog-thumbnail">
+                        <img src="assets/img/illustrations/endgames.jpg" alt="Endgames cover v2">
+                    </div>
+                    <div class="blog-info">
+                        <h2>Endgames</h2>
+                        <p class="blog-date">October 25, 2025</p>
+                    </div>
+                </a>
+            </div>
+            <div class="blog-entry">
                 <a href="blog/machines.html" class="blog-link">
                     <div class="blog-thumbnail">
                         <img src="assets/img/illustrations/machines.jpg" alt="Machines of Loving Grace">
                     </div>
                     <div class="blog-info">
                         <h2>Machines of Loving Grace</h2>
-                        <p class="blog-date">November 16, 2025</p>
+                        <p class="blog-date">October 7, 2025</p>
                     </div>
                 </a>
             </div>
