--- a/art.html
+++ b/art.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="art.html">Art</a></li>
+                <li><a href="projects.html">Making things</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
@@ -77,7 +77,10 @@
             'assets/img/illustrations/mass_ave.jpg',
             'assets/img/illustrations/panic_recursion.png',
             'assets/img/illustrations/penn.png',
-            'assets/img/illustrations/sally.png'
+            'assets/img/illustrations/sally.png',
+            'assets/img/illustration/endgames_cover_v3.jpg',
+            'assets/img/illustrations/sonora.JPG',
+            'assets/img/illustrations/broccoli_tree.JPG'
         ];
     </script>
     <script src="js/gallery.js"></script>
