--- a/projects.html
+++ b/projects.html
@@ -13,15 +13,15 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="art.html">Art</a></li>
+                <li><a href="projects.html">Making things</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h1>Projects</h1>
+        <h1>Making things</h1>
         <p>physical things I built that I remembered/chose to document</p>
 
         <div class="grid">
