--- a/art/obsolescence.html
+++ b/art/obsolescence.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../projects.html">Projects</a></li>
                 <li><a href="../art.html">Art</a></li>
+                <li><a href="../projects.html">Making things</a></li>
             </ul>
         </nav>
     </header>
