--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
                 <li><a href="art.html">Art</a></li>
+                <li><a href="projects.html">Making things</a></li>
                 <li><a href="blog.html">Blog</a></li>
             </ul>
         </nav>
