--- a/art.html
+++ b/art.html
@@ -34,6 +34,17 @@
         </section>
 
         <section>
+            <h2 class="category">film/animation</h2>
+            <p>These are films that I directed for MIT admissions in 2023 and 2024, respectively. For context, MIT admissions releases their decisions on Pi day each year, and acceptance letters get mailed in silver tubes. That's why Pi, circles, and silver tubes are a common theme in each of these films ;)</p>
+            <p>The concept for the 2023 Pi Day video was conceived after I watched the entirety of <em>Neon Genesis Evangelion</em> almost in one sitting. I handled the narrative, storyboard, layouts, and rough animation. I also contributed to character design and animation coloring. Read a blog post about the filmmaking process <a href="https://mitadmissions.org/blogs/entry/mit-vangelion-behind-the-scenes/">here</a>, featuring my wonderful co-creators Kai Van Brunt, Jenny Baek, and Jenny Zhang!</p>
+            <p>The 2024 Pi Day video came from my fever dream of connecting the concept of Pi, Darren Aronofsky's film <em>Pi</em>, the (circular) silver tubes, and a bit of science history into an Oppenheimer-like short featuring the actual MIT mascot, Tim, as Beaverheimer. I co-directed, produced, and wrote the film along with my friend Jade Chongsathapornpong. Someday, we might release the storyboard and behind-the-scene vlog...</p>
+            <div class="video-container">
+                <iframe width="400" height="300" src="https://www.youtube.com/embed/u7BZxpoH2b4?si=0g4gfjmRfvRr_vBc" title="MIT admissions film 1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="400" height="300" src="https://www.youtube.com/embed/k4eUKx9Os1c?si=Jt3WDbCMl8gzpMXL" title="MIT admissions film 2" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+        
+        <section>
             <h2 class="category">comics</h2>
             <div class="grid comics-grid">
                 <a href="art/endgames.html" class="tile">
@@ -45,14 +56,6 @@
                     <img src="assets/img/comics/obsolescence_pg1.png" alt="Obsolescence comic">
                     <h3>Obsolescence</h3>
                 </a>
-            </div>
-        </section>
-
-        <section>
-            <h2 class="category">film/animation</h2>
-            <div class="video-container">
-                <iframe width="400" height="300" src="https://www.youtube.com/embed/u7BZxpoH2b4?si=0g4gfjmRfvRr_vBc" title="MIT admissions film 1" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <iframe width="400" height="300" src="https://www.youtube.com/embed/k4eUKx9Os1c?si=Jt3WDbCMl8gzpMXL" title="MIT admissions film 2" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
     </main>
