--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="profile">
-                <img src="assets/img/prof_pic.jpg" alt="Isabella Yu profile picture">
+                <img src="assets/img/me.png" alt="Isabella Yu profile picture">
                 <p>iyu[at]🐻[dot]edu</p>
             </div>
         </section>
